--- a/css/src/styles/hero.css
+++ b/css/src/styles/hero.css
@@ -1,10 +1,10 @@
-.hero{
+#header{
     display: grid;
     grid-template-columns: 2fr 1fr;
     position: relative;
 }
 
-.hero .left{
+#header .left{
     background-image: url(../images/banner1.jpeg);
     background-size: cover;
     height: 60vh;
@@ -12,11 +12,11 @@
     background-position: center;
 }
 
-.hero .right{
+#header .right{
     background-color: bisque;
 }
 
-.hero .camel-box{
+#header .camel-box{
     position: absolute;
     background-color: #fffffc;
     padding: 32px;
@@ -27,11 +27,11 @@
 }
 
 @media only screen and (max-width:768px){
-    .hero{
+    #header{
         grid-template-columns: 1fr;
     }
     
-    .hero .camel-box{
+    #header .camel-box{
     
         top:50%;
         left: 50%;
